--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,8 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-image: url('https://t-original3.chaonline.com.br/assets/images/cat-4--icons.png');
+
 }
 
 hr {
@@ -4197,7 +4199,7 @@ textarea.form-control-lg {
   --bs-card-cap-color: ;
   --bs-card-height: ;
   --bs-card-color: ;
-  --bs-card-bg: #fff;
+  --bs-card-bg: #f5f5f5;
   --bs-card-img-overlay-padding: 1rem;
   --bs-card-group-margin: 0.75rem;
   position: relative;
